Add withApprovalRight to user
