# resource/linkedup-backend/api-spec.yaml
@@ -18,6 +18,9 @@ servers:
   - url: https://sad6ntmjsh.execute-api.eu-west-2.amazonaws.com/prod
     description: Demo server
 
+security:
+  - bearerAuth: []
+
 paths:
   /classes:
     get:
@@ -167,6 +170,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+        "401":
+          description: Unauthorized
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
         "500":
           description: Unexpected error
           content:
@@ -218,6 +227,7 @@ paths:
       operationId: authenticateUser
       tags:
         - User Authentication
+      security: []        
       requestBody:
         required: true
         content:
@@ -254,6 +264,7 @@ paths:
       operationId: authenticateGoogleUser
       tags:
         - User Authentication
+      security: []        
       requestBody:
         required: true
         content:
@@ -280,6 +291,11 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     Error:
       type: object
@@ -406,6 +422,7 @@ components:
         - name
         - role
         - status
+        - withApprovalRight
         - entitledStudentId
       properties:
         email:
@@ -423,6 +440,9 @@ components:
           items:
             type: string
           description: Id of students
+        withApprovalRight:
+          type: boolean
+          description: Has approval right or not.  Applicable to Teacher only
     UserRegistration:
       type: object
       required:
@@ -480,4 +500,3 @@ components:
           $ref: "#/components/schemas/AuthenticationStatus"
         user:
           $ref: "#/components/schemas/User"
-
